[project]
name = "beangulp-skandia"
version = "0.3.2"
description = "Importer for Skandia XLSX exports to Beancount via beangulp"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Martin Dahl" }]
keywords = ["beancount", "beangulp", "skandia", "xlsx", "sweden"]
dependencies = [
  "beancount>=2.3,<4",
  "beangulp>=0.2.0",
  "pandas>=1.5",
  "openpyxl>=3.1",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["beangulp_skandia*"]

[project.scripts]
beangulp-skandia = "beangulp_skandia.cli:main"
